--- a/Fluentify.Web/Pages/Register.cshtml
+++ b/Fluentify.Web/Pages/Register.cshtml
@@ -77,7 +77,7 @@
 
         .SubmitButton.loading span.btn-loader {
             display: block;
-        }
+     }
 
 </style>
 
@@ -124,5 +124,34 @@
                 <input type="submit" class="btn btn-dark rounded-pill form-control" asp-page-handler="Submit" />
             </div>
         </div>
+
+        <div class="form-group row">
+            <div class="col-12">
+                <p class="text-center">If you already have an account, click <a href="/login">here</a></p>
+            </div>
+        </div>
     </form>
 </div>
+
+        
+
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('form').submit(function () {
+                // Check if the form is valid
+                if (this.checkValidity() === false) {
+                    // If the form is invalid, trigger HTML5 validation
+                    $(this).find(':submit').click();
+                } else {
+                    // If the form is valid, show success message and redirect to login page
+                    alert("You have successfully registered! Please log in to your account.");
+                    window.location.href = "/login";
+                }
+            });
+        });
+    </script>
+}
+
+
