--- a/Fluentify.Web/Pages/Users.cshtml
+++ b/Fluentify.Web/Pages/Users.cshtml
@@ -1,49 +1,109 @@
 ﻿@page
-@model UsersModel
+@model Fluentify.Web.Pages.LoginUserModel
 @{
-    ViewData["Title"] = "Users";
+    ViewData["Title"] = "Sign In";
 }
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(user => user.Users[0].Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(user => user.Users[0].Nickname)
-            </th>
-            <th>
-                @Html.DisplayNameFor(user => user.Users[0].Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(user => user.Users[0].Password)
-            </th>
-            <th>
-                @Html.DisplayNameFor(user => user.Users[0].RegDate)
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var user in Model.Users)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(userItem => user.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(userItem => user.Nickname)
-                </td>
-                <td>
-                    @Html.DisplayFor(userItem => user.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(userItem => user.Password)
-                </td>
-                <td>
-                    @Html.DisplayFor(userItem => user.RegDate)
-                </td>
-            </tr>
+<style type="text/css">
+    body {
+        background-color: #0A3D62;
+        color: #F5F5F5;
+    }
+
+    .error {
+        color: red;
+        font-size: 10px;
+    }
+
+    .form-group {
+        margin-top: 20px;
+    }
+
+    .SubmitButton {
+        position: relative;
+        z-index: 1;
+        display: inline-block;
+        background-color: #007bff;
+        color: #fff;
+        text-align: center;
+        text-transform: uppercase;
+        letter-spacing: 0.15em;
+        font-weight: 600;
+        padding: 1em 2em;
+        margin: 0 auto;
+        overflow: hidden;
+        border-radius: 0.5em;
+        transition: all 0.3s ease-in-out;
+        -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 123, 255, 0.4);
+        box-shadow: 0px 5px 40px -10px rgba(0, 123, 255, 0.4);
+        border: none;
+    }
+
+        .SubmitButton:hover {
+            background-color: #fff;
+            color: #007bff;
+            -webkit-box-shadow: none;
+            box-shadow: none;
         }
-    </tbody>
-</table>
+
+        .SubmitButton span.btn-text {
+            display: block;
+        }
+
+        .SubmitButton span.btn-loader {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: none;
+        }
+
+        .SubmitButton.loading span.btn-text {
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        .SubmitButton.loading span.btn-loader {
+            display: block;
+        }
+</style>
+<br />
+<h2 class="text-center CloneTwitterTitle">Sign In </h2>
+<br />
+<div class="container d-flex justify-content-center align-self-center">
+    <form method="post">
+        <div class="form-group row">
+            <div class="col-12">
+                <input asp-for="User.EmailAddress" type="email" class="form-control" placeholder="example@gmail.com" />
+                <span asp-validation-for="User.EmailAddress" class="error"></span>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <div class="col-12">
+                <input asp-for="User.Password" type="password" class="form-control" placeholder="Password">
+                <span asp-validation-for="User.Password" class="error"></span>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <div class="col-12">
+                <button type="submit" class="SubmitButton form-control">
+                    <span class="btn-text">Login</span>
+                    <span class="btn-loader">
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                        Loading...
+                    </span>
+                </button>
+            </div>
+        </div>
+
+
+        <div class="form-group row">
+            <div class="col-12">
+                <a href="/Register">Don't have an account? Sign Up</a>
+            </div>
+        </div>
+
+    </form>
+</div>
