--- a/Fluentify.Web/Pages/Shared/_Layout.cshtml
+++ b/Fluentify.Web/Pages/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Register">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Login">Login</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Users">Login</a>
                         </li>
                     </ul>
                 </div>
