--- a/Fluentify.Web/Pages/Users.cshtml
+++ b/Fluentify.Web/Pages/Users.cshtml
@@ -6,8 +6,9 @@
 
 <style type="text/css">
     body {
-        background-color: #0A3D62;
-        color: #F5F5F5;
+        background-color: #ffffff;
+        color: #0A3D62;
+        font-family: Arial, sans-serif;
     }
 
     .error {
@@ -66,9 +67,32 @@
         .SubmitButton.loading span.btn-loader {
             display: block;
         }
+
+    .CloneTwitterTitle {
+        font-size: 36px;
+        font-weight: 700;
+        text-align: center;
+        margin-bottom: 30px;
+    }
+
+    form {
+        max-width: 400px;
+        margin: 0 auto;
+    }
+
+    h2 {
+        font-size: 24px;
+        font-weight: 600;
+        margin-bottom: 15px;
+    }
+
+    a {
+        color: #007bff;
+    }
 </style>
+
 <br />
-<h2 class="text-center CloneTwitterTitle">Sign In </h2>
+<h2 class="CloneTwitterTitle">Sign In</h2>
 <br />
 <div class="container d-flex justify-content-center align-self-center">
     <form method="post">
@@ -106,4 +130,12 @@
         </div>
 
     </form>
+</div>
+<div class="form-group row mt-4">
+    <div class="col-12 text-center">
+        <hr>
+        <button class="btn btn-lg btn-outline-secondary" type="button" onclick="window.location.href='@Url.Page("usr_kab", "GoogleLogin", new { returnUrl = ViewData["ReturnUrl"] })'">
+            <i class="fab fa-google mr-2"></i>Sign in with Google
+        </button>
+    </div>
 </div>
