--- a/Fluentify.Web/Pages/Users.cshtml
+++ b/Fluentify.Web/Pages/Users.cshtml
@@ -130,12 +130,11 @@
         </div>
 
     </form>
-</div>
-<div class="form-group row mt-4">
-    <div class="col-12 text-center">
-        <hr>
-        <button class="btn btn-lg btn-outline-secondary" type="button" onclick="window.location.href='@Url.Page("usr_kab", "GoogleLogin", new { returnUrl = ViewData["ReturnUrl"] })'">
-            <i class="fab fa-google mr-2"></i>Sign in with Google
-        </button>
+    <<div class="form-group row mt-4">
+        <div class="col-12 text-center">
+            <hr>
+            <button class="btn btn-lg btn-outline-secondary" type="button" onclick="window.open('@Url.Page("usr_kab", "GoogleLogin", new { returnUrl = ViewData["ReturnUrl"] })', 'Google Login'); return false;">
+                <i class="fab fa-google mr-2"></i>Sign in with Google
+            </button>
+        </div>
     </div>
-</div>
