--- a/Fluentify.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Fluentify.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,6 +6,8 @@
     Layout = "~/Areas/Identity/Pages/_AuthLayout.cshtml";
 }
 
+@using Microsoft.AspNetCore.Authentication.Google
+
 <div class="row justify-content-center">
     <div class="col-10">
         <section>
@@ -33,6 +35,17 @@
                     <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
                 </div>
             </form>
+
+            <div class="mt-3">
+                <form asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                    <div>
+                        <button type="submit" class="btn btn-secondary">
+                            <img src="https://accounts.google.com/favicon.ico" alt="Google" width="16" height="16" class="align-middle">
+                            Sign in with Google
+                        </button>
+                    </div>
+                </form>
+            </div>
         </section>
     </div>
 </div>
