--- a/Fluentify.Web/Views/Home/Index.cshtml
+++ b/Fluentify.Web/Views/Home/Index.cshtml
@@ -65,8 +65,9 @@
                 <div class="card-body">
                     <h5 class="card-title">Level 1</h5>
                     <p class="card-text">Easy</p>
-                    <p class="card-text">Number of Questions: 10</p>
+                    <p class="card-text">Number of Questions: 15</p>
                     <a href="/Test/Start?level=1" class="btn btn-primary">Start Test</a>
+                    <p class="card-text">Result: <span id="result-1"></span></p>
                 </div>
             </div>
         </div>
@@ -78,6 +79,7 @@
                     <p class="card-text">Medium</p>
                     <p class="card-text">Number of Questions: 15</p>
                     <a href="/Test/Start?level=2" class="btn btn-primary">Start Test</a>
+                    <p class="card-text">Result: <span id="result-2"></span></p>
                 </div>
             </div>
         </div>
@@ -89,76 +91,92 @@
                     <p class="card-text">Hard</p>
                     <p class="card-text">Number of Questions: 20</p>
                     <a href="/Test/Start?level=3" class="btn btn-primary">Start Test</a>
+                    <p class="card-text">Result: <span id="result-3"></span></p>
                 </div>
             </div>
         </div>
-          <div class="col-md-4">
+
+        <!-- Додайте інші рівні тут з відповідними id для результатів -->
+        <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Level 4</h5>
                     <p class="card-text">Hard</p>
                     <p class="card-text">Number of Questions: 20</p>
-                    <a href="/Test/Start?level=3" class="btn btn-primary">Start Test</a>
+                    <a href="/Test/Start?level=4" class="btn btn-primary">Start Test</a>
+                    <p class="card-text">Result: <span id="result-4"></span></p>
                 </div>
             </div>
         </div>
-          <div class="col-md-4">
+
+        <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Level 5</h5>
                     <p class="card-text">Hard</p>
                     <p class="card-text">Number of Questions: 20</p>
-                    <a href="/Test/Start?level=3" class="btn btn-primary">Start Test</a>
+                    <a href="/Test/Start?level=5" class="btn btn-primary">Start Test</a>
+                    <p class="card-text">Result: <span id="result-5"></span></p>
                 </div>
             </div>
         </div>
-          <div class="col-md-4">
+
+        <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Level 6</h5>
                     <p class="card-text">Hard</p>
                     <p class="card-text">Number of Questions: 20</p>
-                    <a href="/Test/Start?level=3" class="btn btn-primary">Start Test</a>
+                    <a href="/Test/Start?level=6" class="btn btn-primary">Start Test</a>
+                    <p class="card-text">Result: <span id="result-6"></span></p>
                 </div>
             </div>
         </div>
-          <div class="col-md-4">
+
+        <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Level 7</h5>
                     <p class="card-text">Hard</p>
                     <p class="card-text">Number of Questions: 20</p>
-                    <a href="/Test/Start?level=3" class="btn btn-primary">Start Test</a>
+                    <a href="/Test/Start?level=7" class="btn btn-primary">Start Test</a>
+                    <p class="card-text">Result: <span id="result-7"></span></p>
                 </div>
             </div>
         </div>
-          <div class="col-md-4">
+
+        <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Level 8</h5>
                     <p class="card-text">Hard</p>
                     <p class="card-text">Number of Questions: 20</p>
-                    <a href="/Test/Start?level=3" class="btn btn-primary">Start Test</a>
+                    <a href="/Test/Start?level=8" class="btn btn-primary">Start Test</a>
+                    <p class="card-text">Result: <span id="result-8"></span></p>
                 </div>
             </div>
         </div>
+
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Level 9</h5>
                     <p class="card-text">Hard</p>
                     <p class="card-text">Number of Questions: 20</p>
-                    <a href="/Test/Start?level=3" class="btn btn-primary">Start Test</a>
+                    <a href="/Test/Start?level=9" class="btn btn-primary">Start Test</a>
+                    <p class="card-text">Result: <span id="result-9"></span></p>
                 </div>
             </div>
         </div>
+
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Level 10</h5>
                     <p class="card-text">Hard</p>
                     <p class="card-text">Number of Questions: 20</p>
-                    <a href="/Test/Start?level=3" class="btn btn-primary">Start Test</a>
+                    <a href="/Test/Start?level=10" class="btn btn-primary">Start Test</a>
+                    <p class="card-text">Result: <span id="result-10"></span></p>
                 </div>
             </div>
         </div>
